# discord-context-bridge

./: .gitignore  CHANGELOG.md  ISSUE_LIST.md  PROCESS_BOUNDARY.md  PUBLIC_READY.md  PUBLIC_RELEASE_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md  TECH_DEBT_AUDIT.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
capability/: manifest.yaml
docs/: 2026-07-01-impact-todo-critical-review.md  2026-07-01-impact-todo.md  2026-07-13-desktop-cache-probe-handoff.md  2026-07-15-cache-inventory-chrome-regression-review.md  architecture-context-closeout.md  chat-context-2026-07-05-roadmap-metrics.md  chat-context-2026-07-06-history-rewrite-and-site-adapter.md  chat-context-2026-07-06-residual-zero-closeout.md  chat-context-2026-07-08-codetan-post-send-closeout.md  chat-context-2026-07-08-residual-zero-account-boundary.md  codex-chrome-extension-capability-inventory.md  codex-discord-ingress.md  discord-send-operation-runbook.md  full-reference.md  live-test-reinforcements.md  operating-contract.md  pr-scope-guardrails.md  reply-context-routing.md  report-latest-architecture-context.md  rest-backfill-v1-review-handoff.md  routes.md  site-adapters.md
references/: initial-thread-ruleset.html  initial-thread-ruleset.md
schemas/: dcb_capture_manifest.v1.schema.json  dcb_raw_capture.v1.schema.json  discord_bridge_acquisition_context.v1.schema.json  discord_bridge_latest_snapshot_report.v1.schema.json  discord_bridge_report_acquisition_context.v1.schema.json  discord_bridge_snapshot_body_evidence.v1.schema.json
scripts/: boundary_logic_check.py  bump_version.py  check_pr_language.py  chrome_visible_fallback_guard.py  codex_chrome_bundle_smoke.py  codex_discord_ingress_smoke.py  discord_bot_private_ingest.py  discord_bot_route_preflight.py  discord_channel_event_probe.py  discord_inventory_dashboard.py  discord_live_text_source.py  discord_main_route_smoke.py  discord_plugin_route_status.py  discord_rest_backfill.py  (+31 more)
(+64 files in other folders)
