[project]
name = "discord-context-bridge"
version = "0.1.0"
description = "Discord の可視会話テキストを扱う local-first な文脈 bridge"
requires-python = ">=3.11"
readme = "README.md"

[project.optional-dependencies]
mcp = ["mcp>=1.28,<2"]

[project.scripts]
discord-context-bridge = "discord_context_bridge.cli:main"
discord-context-bridge-mcp = "discord_context_bridge.mcp_server:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
