[project]
name = "discord-context-bridge"
version = "0.10.0"
description = "Discord の可視会話テキストを扱う local-first な文脈 bridge"
requires-python = ">=3.11"
readme = "README.md"
dependencies = ["jsonschema>=4.20,<5"]

[project.optional-dependencies]
mcp = ["mcp>=1.28,<2"]

[project.scripts]
discord-context-bridge = "discord_context_bridge.cli:main"
discord-context-bridge-mcp = "discord_context_bridge.mcp_server:main"
discord-context-bridge-mcp-http = "discord_context_bridge.mcp_server:main_http"

[tool.setuptools.data-files]
"share/discord-context-bridge/site_adapters" = ["site_adapters/index.json", "site_adapters/discord.v1.json"]
"share/discord-context-bridge/schemas" = ["schemas/dcb_raw_capture.v1.schema.json", "schemas/dcb_capture_manifest.v1.schema.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
